--- a/instructors.html
+++ b/instructors.html
@@ -1,7 +1,7 @@
-<!DOCTYPE html> 
+<!DOCTYPE html>
 <html>
 <head>
-<style> 
+<style>
     .flex-container
     {
         display: flex;
@@ -31,10 +31,10 @@
         border: 2px solid white;
         border-radius: 5px;
         padding: 15px;
-    }	
+    }
     #myBtn
     {
-        display: none; 
+        display: none;
         position: fixed;
         bottom: 10px;
         right: 10px;
@@ -68,7 +68,7 @@
         <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
-            <span class="icon-bar"></span>   
+            <span class="icon-bar"></span>
         </button>
     <a class="navbar-brand" href="index.html">Fantasy Physics</a>
     </div>
@@ -85,7 +85,7 @@
           <li><a href="neutrinos.html">Neutrino Members</a></li>
           <li><a href="astroparticle.html">Astroparticle Members</a></li>
           <li><a href="lhcatlas.html">LHC Atlas Members</a></li>
-          <li><a href="lhccms.html">LHC CMS Members</a></li>            
+          <li><a href="lhccms.html">LHC CMS Members</a></li>
         </ul>
       </li>
             <li><a href="scoringrubric.html">The Hunt</a></li>
@@ -98,21 +98,21 @@
             <li><a href="login.html"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
             <a href="https://ku.edu/" class="navbar-right"><img src="kansas-jayhawks-profile.jpg" style="width:45px;height:51px"></a>
         </ul>
-      </div>   
+      </div>
       </nav>
       <div class="w3-container">
       <div class="cd-scrolling-bg cd-scrolling-bg--color-2">
       <div class="cd-scrolling-bg__content">
 <br>
 	<p class="round1" style="color:white"><font size="4">Below are extra resources for you, the educators,
-		organized by school institution, ranging from crash course and introduction videos, to lesson 
+		organized by school institution, ranging from crash course and introduction videos, to lesson
 		plans coupled with activities, to explanations behind real-world scenarios of physics. For your
 		convenience, all resources are linked.<br><br>
-		We hope that these resources, coupled with the Fantasy Physics gameplay, will pique your 
+		We hope that these resources, coupled with the Fantasy Physics gameplay, will pique your
 		students' interest into the science that explains the Universe: physics.</p></font>
-<br>	      
-	      <h3 style="color:white"><b><i>Middle School Instructors</b></i></h2> 
-	      <ul class="round1" style="color:white"><font size="3">      
+<br>
+	      <h3 style="color:white"><b><i>Middle School Instructors</b></i></h2>
+	      <ul class="round1" style="color:white"><font size="3">
 	      	<li><a href="https://www.pbslearningmedia.org/resource/physics-music-braincraft/physics-music-braincraft/#.W3MF-ehKg2w" style="color:white"><u>Crash Course Video - The Physics of Music</u></a></li>
 	      	<li><a href="https://www.pbslearningmedia.org/resource/kqed09.sci.phys.maf.kqedsailing/the-physics-of-sailing/#.W3MHIehKg2w" style="color:white"><u>QUEST Video: The Physics of Sailing</u></a></li>
 	      	<li><a href="https://www.pbslearningmedia.org/resource/sf10.sci.psci.forces.motion.basketball/physics-of-basketball/#.W3MHWuhKg2w" style="color:white"><u>The Physics of Basketball Video</u></a></li>
@@ -124,41 +124,41 @@
 	      	<li><a href="http://cwp.library.ucla.edu/" style="color:white"><u>Contributions of 20<sup>th</sup> Century Women to Physics</u></a></li>
 	      	<li><a href="https://www.nsf.gov/news/overviews/physics/index.jsp" style="color:white"><u>National Science Foundation Physics Overview (Higher Level)</u></a></li>
 		<li><a href="https://www.teachengineering.org/curriculum/browse?subjectArea=Physics" style="color:white"><u>TeachEngineering Lessons & Student Labs</u></a></li>
-		<li><a href="https://www.pbslearningmedia.org/resource/nvwtp-sci-physicstexting/wgbh-nova-what-the-physics-the-physics-behind-texting/#.W3MRwuhKg2w" style="color:white"><u>The Physics Behind Texting Video</u></a></li>			      
-<br>	      
+		<li><a href="https://www.pbslearningmedia.org/resource/nvwtp-sci-physicstexting/wgbh-nova-what-the-physics-the-physics-behind-texting/#.W3MRwuhKg2w" style="color:white"><u>The Physics Behind Texting Video</u></a></li>
+<br>
 	      <h3 style="color:white"><b><i>High School Instructors</b></i></h2>
 	      <ul class="round1" style="color:white"><font size="3">
-		<li><a href="https://ippex.pppl.gov/" style="color:white"><u>Interactive Plasma Physics Education Experience</u></a></li>		     
+		<li><a href="https://ippex.pppl.gov/" style="color:white"><u>Interactive Plasma Physics Education Experience</u></a></li>
 		<li><a href="http://www.physics.umd.edu/rgroups/ripe/perg/abp/" style="color:white"><u>Activity Based Physics</u></a></li>
 		<li><a href="https://blossoms.mit.edu/resources/physics_resources" style="color:white"><u>MIT Blossoms Physics Resources</u></a></li>
-		<li><a href="https://www.physicsclassroom.com/" style="color:white"><u>The Interactive Physics Classroom</u></a></li>	      
-		<li><a href="http://www.learner.org/courses/physics/index.html" style="color:white"><u>Physics for the 21st Century</u></a></li>		      
-		<li><a href="https://www.adoptaphysicist.org/" style="color:white"><u>Adopt-a-Physicist</u></a></li>				      
-		<li><a href="https://www.aps.org/programs/education/highschool/teachers/index.cfm" style="color:white"><u>American Physical Society High School Teacher Resources</u></a></li>		      
-		<li><a href="https://psrc.aapt.org/?" style="color:white"><u>The Physical Sciences Resource Center</u></a></li>	
-		<li><a href="https://www.khanacademy.org/science/physics" style="color:white"><u>Khan Academy Physics</u></a></li><br>		      
-		<p style="color:white"><i>The above listed resources for Middle School Instructors can also be used for High School students.</i></p>		      
-	      </ul></font></ul></font>	      
-<br>	      
+		<li><a href="https://www.physicsclassroom.com/" style="color:white"><u>The Interactive Physics Classroom</u></a></li>
+		<li><a href="http://www.learner.org/courses/physics/index.html" style="color:white"><u>Physics for the 21st Century</u></a></li>
+		<li><a href="https://www.adoptaphysicist.org/" style="color:white"><u>Adopt-a-Physicist</u></a></li>
+		<li><a href="https://www.aps.org/programs/education/highschool/teachers/index.cfm" style="color:white"><u>American Physical Society High School Teacher Resources</u></a></li>
+		<li><a href="https://psrc.aapt.org/?" style="color:white"><u>The Physical Sciences Resource Center</u></a></li>
+		<li><a href="https://www.khanacademy.org/science/physics" style="color:white"><u>Khan Academy Physics</u></a></li><br>
+		<p style="color:white"><i>The above listed resources for Middle School Instructors can also be used for High School students.</i></p>
+	      </ul></font></ul></font>
+<br>
 	      <h3 style="color:white"><b><i>University Instructors</b></i></h2>
 	      <ul class="round1" style="color:white"><font size="3">
-		<li><a href="https://openstax.org/details/college-physics?Book%20details" style="color:white"><u>OpenStax Free College Physics Textbook</u></a></li>		      
-		<li><a href="http://www.wolframalpha.com/input/?i=physics" style="color:white"><u>Wolfram Alpha Physics</u></a></li>		      
-		<li><a href="https://www.aapt.org/Publications/ajp.cfm" style="color:white"><u>American Journal of Physics</u></a></li>		      
+		<li><a href="https://openstax.org/details/college-physics?Book%20details" style="color:white"><u>OpenStax Free College Physics Textbook</u></a></li>
+		<li><a href="http://www.wolframalpha.com/input/?i=physics" style="color:white"><u>Wolfram Alpha Physics</u></a></li>
+		<li><a href="https://www.aapt.org/Publications/ajp.cfm" style="color:white"><u>American Journal of Physics</u></a></li>
 		<li><a href="https://www.aapt.org/Publications/tpt.cfm" style="color:white"><u>The Physics Teacher</u></a></li>
-		<li><a href="http://www.compadre.org/picup/" style="color:white"><u>Partnership for Integration of Computation into Undergraduate Physics</u></a></li>		      
-		<li><a href="http://www.compadre.org/osp/" style="color:white"><u>Open Source Physics</u>; engages students in physics, computation, and computer modeling</a></li>		    
+		<li><a href="http://www.compadre.org/picup/" style="color:white"><u>Partnership for Integration of Computation into Undergraduate Physics</u></a></li>
+		<li><a href="http://www.compadre.org/osp/" style="color:white"><u>Open Source Physics</u>; engages students in physics, computation, and computer modeling</a></li>
 		<li><a href="http://www.compadre.org/jtupp/" style="color:white"><u>Phys21: Preparing Physics Students for 21<sup>st</sup> Century Careers</u>; provides guidance for
 			physicists considering revising the undergraduate curriculum</a></li>
-		<li><a href="https://www.physport.org/index.cfm?" style="color:white"><u>PhysPort</u>; resources based on physics education research</a></li>		      
-		<li><a href="https://www.aapt.org/Resources/" style="color:white"><u>Additional Resources from the American Association of Physics Teachers</u></a></li>	      
+		<li><a href="https://www.physport.org/index.cfm?" style="color:white"><u>PhysPort</u>; resources based on physics education research</a></li>
+		<li><a href="https://www.aapt.org/Resources/" style="color:white"><u>Additional Resources from the American Association of Physics Teachers</u></a></li>
 	      </ul></font>
-<br>	      
+<br>
 	      <p class="round1" style="color:white"><font size="4">Although this resource list we have compiled is incomplete, we hope that they help and lead to further
 		      understanding and exploration of instruction and physics.<br><br><i>The Fantasy Physics Team</i></p></font>
-	      
+
            <button id="myBtn" onclick="topFunction()">
-	   <span class="glyphicon glyphicon-arrow-up"></span> Top </button>   
+	   <span class="glyphicon glyphicon-arrow-up"></span> Top </button>
    	   <script>
 	   window.onscroll = function() {scrollFunction()};
 	   function scrollFunction()
@@ -179,11 +179,11 @@
 	   }
 	    </script>
 <div class="flex-container">
-             <p style="color:white">Developed at <a href="http://physics.ku.edu/" style="color:white"><u> The University of Kansas - Physics & Astronomy Department</u></a> | 
-             <a href="about.html" style="color:white"><u>About</u></a> | <a href="creators.html" style="color:white"><u>The Creators</u></a></p>
+             <p style="color:white">Developed at <a href="http://physics.ku.edu/" style="color:white"><u> The University of Kansas - Physics & Astronomy Department</u></a> |
+             <a href="about.html" style="color:white"><u>About</u></a> | <a href="creators.html" style="color:white"><u>The Creators</u></a>  | &copy; 2018</p>
         </div>
         </div>
         </div>
-	</div>	      
+	</div>
     </body>
     </html>
