--- a/neutrinos.html
+++ b/neutrinos.html
@@ -150,7 +150,7 @@
             located at Fermilab, at the source of the neutrinos, and the other located 450 miles away, in northern Minnesota, at the
             Soudan Underground Mine State Park."</font></p>
         <hr>
-        <h3><a href="http://borex.lngs.infn.it/" style="color:white"><u>BOREXINO</u></a></h3>           
+        <h3><a href="http://borex.lngs.infn.it/" style="color:white"><u>BOREXINO</u></a></h3>
         <p class="round1" style="margin-left:20px;color:white"><font size="3">"The BOREXINO detector is a real time detector for low energy
             solar neutrinos, with the specific goal of measuring the Be-7 neutrino flux from the sun.</font></p>
         <hr>
@@ -200,7 +200,7 @@
 	    </script>
        <div class="flex-container">
              <p style="color:white">Developed at <a href="http://physics.ku.edu/" style="color:white"><u> The University of Kansas - Physics & Astronomy Department</u></a> |
-             <a href="about.html" style="color:white"><u>About</u></a> | <a href="creators.html" style="color:white"><u>The Creators</u></a></p>
+             <a href="about.html" style="color:white"><u>About</u></a> | <a href="creators.html" style="color:white"><u>The Creators</u></a> | &copy; 2018</p>
        </div>
        </div>
        </div>
