--- a/rules.html
+++ b/rules.html
@@ -122,42 +122,72 @@
               <div id="collapse1" class="panel-collapse collapse">
                 <ul class="list-group">
                   <li class="list-group-item"><font size="3"><i><b>The Executive</i></b> - Owner and in charge of their own Crew</font></li>
-                  <li class="list-group-item"><font size="3"><i><b>The Alliance</i></b> - Where all Executive's Crews are housed and competing against other Crews</font></li>
+                  <li class="list-group-item"><font size="3"><i><b>The Alliance</i></b> - Where each Executive's Crews are housed and where the competition against Crews takes place</font></li>
                   <li class="list-group-item"><font size="3"><i><b>The Crew</i></b> - Chosen Physics research subcategories that encompass The Crew Members</font></li>
                   <li class="list-group-item"><font size="3"><i><b>The Crew Members</i></b> - Chosen physics experiments conducted under each specific research subcategory;
                       these Members are to be selected for The Executive's own Crew</font></li>
-
+                  <li class="list-group-item"><font size="3"><i><b>Fantasy Points</i></b> - Points are tallied to each crew member and serves as their stats and supplies their ranking. The higher the points,
+                      the higher the ranking and the higher chances of that member doing well. Points will determine which crew will enter the playoffs in an event of a game-winning tie.</font></li>
+                  <li class="list-group-item"><font size="3"><i><b></i></b> - </font></li>
                 </ul>
               </div>
             </div>
           </div>
         </div>
+
     <div class="container">
         <div class="panel-group">
             <div class="panel panel-default">
                 <div class="panel-heading">
-                    <h4 class="panel-title">
-                        <a data-toggle="collapse" href="#collapse1">Collapsible Group 1</a>
-                    </h4>
-                </div>
-                <div id="collapse1" class="panel-collapse collapse">
-                    <div class="panel-body">Lorem ipsum dolor sit amet, consectetur adipisicing elit,
-                        sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-                        quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</div>
-                </div>
-            </div>
-            <div class="panel panel-default">
-                <div class="panel-heading">
-                    <h4 class="panel-title">
-                        <a data-toggle="collapse" href="#collapse2">Collapsible Group 2</a>
-                    </h4>
+                    <h1 class="panel-title">
+                        <a data-toggle="collapse" href="#collapse2" style="color:black"><h4>How It Works Overview</a></h4>
+                    </h1>
                 </div>
                 <div id="collapse2" class="panel-collapse collapse">
-                    <div class="panel-body">Lorem ipsum dolor sit amet, consectetur adipisicing elit,
-                        sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-                        quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</div>
+                    <ol class="list-group">
+                      <li class="list-group-item"><font size="3"><i><b> 1) Join the Alliance</i></b><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Every executive signs up for a spot
+                      in the alliance to begin selecting their own crew.</font></li>
+                      <li class="list-group-item"><font size="3"><i><b> 2) Prepare to select your crew by surveying crew members</i></b><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                      Prior to picking your fantasy crew, explore all the available members to have a pre-made list of members ranked according to your individual preference.
+                      Understanding the scoring system and crew setup is essential to creating a bulletproof strategy.</font></li>
+                      <li class="list-group-item"><font size="3"><i><b> 3) Build your crew</i></b><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Each executive chooses one member
+                      at a time until their crew is full; don't forget to select a well-rounded crew. </font></li>
+                      <li class="list-group-item"><font size="3"><i><b> 4) Your crew competes against another crew every week</i></b><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                          The members' stats from <a href="scoringrubric.html" style="color:black"><i><u>The Hunt</u></i></a> taken from presentations given at the American Physical Society convention are converted into fantasy points. The crew that has
+                          earned the most points wins the game for that week. Win as many games as possible for a chance to qualify for the playoffs.</font></li>
+                      <li class="list-group-item"><font size="3"><i><b> 5) Make moves to boost your crew</i></b><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; As the executive, you are in charge:
+                          Drop or bench members you feel aren't cutting it and replace them with available members, your second strings, or even make trades with other executives.</font></li>
+                      <li class="list-group-item"><font size="3"><i><b> 6) Your crew (optimisticlly) makes the playoffs and wins the alliance</i></b><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                          Only the strong survive, and at the end of the fantasy season, the top crews square off in a single-elimination tournament to decide the alliance champion. The last crew
+                          standing wins a suprise, and substantial, amount of fantasy points and bragging rights until the next season. Make no mistake: there can only be one alliance champ.</font></li>
+                    </ol>
                 </div>
             </div>
+        </div>
+    </div>
+
+    <div class="container">
+        <div class="panel-group">
+            <div class="panel panel-default">
+                <div class="panel-heading">
+                    <h1 class="panel-title">
+                        <a data-toggle="collapse" href="#collapse3" style="color:black"><h4>Crew Specifics</a></h4>
+                    </h1>
+                </div>
+                <div id="collapse3" class="panel-collapse collapse">
+                    <ul class="list-group">
+                      <li class="list-group-item"><font size="3"><i><b> A) </i></b> Fantasy points will be scored and stored digitally </font></li>
+                      <li class="list-group-item"><font size="3"><i><b> B) </i></b> Each crew will have 8 different members </font></li>
+                      <li class="list-group-item"><font size="3"><i><b> C) </i></b> No two Executives may have the exact same crew; at least one member must differ </font></li>
+                      <li class="list-group-item"><font size="3"><i><b> D) </i></b> When the number of Executives is odd, each Executive & their crew will have a bye week </font></li>
+                      <li class="list-group-item"><font size="3"><i><b> E) </i></b> </font></li>
+                      <li class="list-group-item"><font size="3"><i><b></i></b> - </font></li>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
             <div class="panel panel-default">
                 <div class="panel-heading">
                     <h4 class="panel-title">
@@ -194,87 +224,24 @@
                         quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</div>
                 </div>
             </div>
-            <div class="panel panel-default">
-                <div class="panel-heading">
-                    <h4 class="panel-title">
-                        <a data-toggle="collapse" href="#collapse2">Collapsible Group 2</a>
-                    </h4>
-                </div>
-                <div id="collapse2" class="panel-collapse collapse">
-                    <div class="panel-body">Lorem ipsum dolor sit amet, consectetur adipisicing elit,
-                        sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-                        quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</div>
-                </div>
-            </div>
-            <div class="panel panel-default">
-                <div class="panel-heading">
-                    <h4 class="panel-title">
-                        <a data-toggle="collapse" href="#collapse2">Collapsible Group 2</a>
-                    </h4>
-                </div>
-                <div id="collapse8" class="panel-collapse collapse">
-                    <div class="panel-body">Lorem ipsum dolor sit amet, consectetur adipisicing elit,
-                        sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-                        quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</div>
-                </div>
-            </div>
-            <div class="panel panel-default">
-                <div class="panel-heading">
-                    <h4 class="panel-title">
-                        <a data-toggle="collapse" href="#collapse8">Collapsible Group 8</a>
-                    </h4>
-                </div>
-                <div id="collapse2" class="panel-collapse collapse">
-                    <div class="panel-body">Lorem ipsum dolor sit amet, consectetur adipisicing elit,
-                        sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-                        quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</div>
-                </div>
-            </div>
         </div>
     </div>
 
-    <ul>
-        <li style="margin-left:50px;color:white;font-size:22px"><b><i>EP - </b></i>Event Points</li>
-        <li style="margin-left:50px;color:white;font-size:22px"><b><i>Preliminary Winner(s) - </b></i>Users who win Events within a Tournament</li>
-     </ul></div>
 
      <h3 style="margin-left:25px;font-size:30px;color:white">Game Play Process</h3>
-     <ul>
-         <li style="margin-left:50px;color:white;font-size:22px">Users choose a Tournament they would like to participate in</li>
-         <li style="margin-left:50px;color:white;font-size:22px">Users then create an Index for each Event that occurs in the Tournament</li>
-         <li style="margin-left:50px;color:white;font-size:22px">Users then attend their Team’s presentation and score the presentation based on the rubric for that Tournament</li>
-         <li style="margin-left:50px;color:white;font-size:22px">A User wins an Event by earning the most amount of EP</li>
-         <li style="margin-left:50px;color:white;font-size:22px">The Winners of the Events within a Tournament compare their total GP earned </li>
-         <li style="margin-left:75px;color:white;font-size:18px">Whoever holds the most GP is the Tournament Champion</li>
-	 	<br></ul>
-     <h1 style="margin-left:5px;color:white">Tournament Rules<br></h1>
+
      <h3 style="margin-left:25px;font-size:30px;color:white">What is a Tournament?</h3>
-     <ul>
-         <li style="margin-left:50px;color:white;font-size:25px">A Tournament is the highest tier, with regards to winning, of the game</li>
-         <li style="margin-left:75px;color:white;font-size:22px">It’s a general category of physics within which there are many subcategories (Events)</li>
-         <li style="margin-left:100px;color:white;font-size:19px">EXAMPLE: <i>Neutrino Tournament</i></li>
-         <li style="margin-left:125px;color:white;font-size:16px">The general category is "Neutrino(s)"</li>
-     </ul>
-     <h3 style="margin-left:25px;font-size:30px;color:white">Rules of a Tournament</h3>
-     <ul>
-         <li style="margin-left:50px;color:white;font-size:25px">Users must participate in each Event within a Tournament</li>
-         <li style="margin-left:50px;color:white;font-size:25px">There may be only <i>one</i> winner within each Tournament</li>
-     </ul>
+
      <h3 style="margin-left:25px;font-size:30px;color:white">User Restriction</h3>
      <ul>
          <li style="margin-left:50px;color:white;font-size:25px">A Tournament must have at least five (5) Users</li>
-         <li style="margin-left:50px;color:white;font-size:25px">A Tournament may not have more than ten (10) Users</li>
      </ul>
-     <h3 style="margin-left:25px;font-size:30px;color:white">How is a Tournament won?</h3>
+
+     <h3 style="margin-left:25px;font-size:30px;color:white">Tie Breaker </h3>
      <ul>
-        <li style="margin-left:50px;color:white;font-size:25px">A Tournament is won by the User who earns the most amount of GP, assuming no required Tie Breaker rounds</li>
-     </ul>
-     <h3 style="margin-left:25px;font-size:30px;color:white">Tie Breaker (Amount of GP does not matter here)</h3>
-     <ul>
-         <li style="margin-left:50px;color:white;font-size:25px">Event process(with the exception of attending Team presentations) is repeated between only the preliminary winners</li>
-         <li style="margin-left:75px;color:white;font-size:22px">Using the scores obtained from attending the presentations, the Users compare their scores for each Event and the User whose Team Member, individually, has the highest score wins that event</li>
          <li style="margin-left:100px;color:white;font-size:19px">EXAMPLE:</li>
      </ul>
+
      <h4 style="text-align:center;color:white"><b><i>Neutrino Tournament</b></i></h4>
      <table class="table table-bordered"style="background-color:rgb(119, 128, 175);color:white">
      <tr>
@@ -308,51 +275,13 @@
      </table>
      <ul>
          <li style="margin-left:50px;color:white;font-size:20px"><i>User B won the most Events and thus, the Tournament</i></li>
-         <li style="margin-left:75px;color:white;font-size:18px">The preliminary winner who wins the most Events is the Tournament Champion</li>
-         <li style="margin-left:100px;color:white;font-size:16px">Tie Breaker is activated, if applicable, until there is only one User left</li>
      </ul><br>
-     <h1 style="margin-left:5px;font-size:30px;color:white">Event Rules/Game Play</h1>
-     <h3 style="margin-left:25px;font-size:30px;color:white">What is an event?</h3>
-     <ul>
-         <li style="margin-left:50px;color:white;font-size:22px">An Event is the lowest tier, with regards to winning, of the game</li>
-         <li style="margin-left:50px;color:white;font-size:22px">It is the subcategory topics within a general category (Tournament)
-         <li style="margin-left:75px;color:white;font-size:20px">EXAMPLE:
-     </ul>
-     <h4 style="text-align:center;color:white"><b><i>Neutrino Tournament</b></i></h4>
-     <table class="table table-bordered"style="background-color:rgb(119, 128, 175);color:white">
-     <tr>
-         <th><b>Top Quark Event</b></th>
-         <th><b>Bottom Quark Event</b></th>
-     </tr>
-     </table>
-     <h3 style="margin-left:25px;font-size:30px;color:white">Rules of an Event</h3>
-     <ul>
-         <li style="margin-left:50px;color:white;font-size:25px">Scoring</li>
-         <li style="margin-left:75px;color:white;font-size:22px">Scoring will take place digitally and is based on a rubric designed for the Tournament being played</li>
-         <li style="margin-left:50px;color:white;font-size:25px">Event Number Restriction</li>
-         <li style="margin-left:75px;color:white;font-size:22px">There must be an ODD number of Events in a Tournament</li>
-         <li style="margin-left:50px;color:white;font-size:25px"><b>Team Rules</b></li>
-         <li style="margin-left:75px;color:white;font-size:22px">Users are restricted in the number of Teams allowed to be added to
-         their Index, based on the number of Users and Teams participating in the Event</li>
-         <li style="margin-left:100px;color:white;font-size:19px">The number of teams in a User's Index must be:
-         <li style="margin-left:125px;color:white;font-size:16px">(# of Users) - 2</li>
-         <li style="margin-left:100px;color:white;font-size:19px">An Event must have at least 1.5 times the number of Teams
-         	per User(# of Teams = (1.5)(# of Users))</li>
-         <li style="margin-left:100px;color:white;font-size:19px">When dealing with an odd number of Users, round the number of Teams up to the nearest integer</li>
-         <li style="margin-left:75px;color:white;font-size:22px">Indexes within an Event may not be identical</li>
-         <li style="margin-left:100px;color:white;font-size:19px">Index likeness is acceptable up to one Team in difference</li>
-         <li style="margin-left:125px;color:white;font-size:16px"><b>Okay</b> - User A's Index: XXXX | User B's Index: XXXO | User C's Index: XXXY</li>
-         <li style="margin-left:125px;color:white;font-size:16px"><b>Not Okay></b> - User A's Index: XXXX | User B's Index: XXXX | User C's Index: XXXO</li>
-     </ul>
-     <h3 style="margin-left:25px;font-size:30px;color:white">How is an Event won?</h3>
-     <ul>
-         <li style="margin-left:50px;color:white;font-size:25px">An Event is won by a User whose cumulative EP is the highest</li>
-         <li style="margin-left:50px;color:white;font-size:25px">Winning an Event earns the User 100GP</li>
-     </ul>
+
      <h3 style="margin-left:25px;font-size:30px;color:white">Ties</h3>
      <ul>
          <li style="margin-left:50px;color:white;font-size:25px">A tie within an Event is settled by evenly distributing 100GP to each winner</li>
      </ul>
+
 	  <button id="myBtn" onclick="topFunction()">
 	  <span class="glyphicon glyphicon-arrow-up"></span> Top </button>
 
@@ -378,8 +307,7 @@
    	<div class="flex-container">
              <p style="color:white">Developed at <a href="http://physics.ku.edu/" style="color:white"><u> The University of Kansas - Physics & Astronomy Department</u></a> |
              <a href="about.html" style="color:white"><u>About</u></a> | <a href="creators.html" style="color:white"><u>The Creators</u></a> | &copy; 2018</p>
-        </div>
-        </div>
-        </div>
+    </div>
+
     </body>
     </html>
