--- a/creators.html
+++ b/creators.html
@@ -133,8 +133,8 @@
 		<font size="4">John Styers is a senior at the University of Kansas studying <a href="https://cpe.ku.edu/" style="color:white"><u>Chemical Engineering</u></a>
 			with a focus in Biomedical Engineering. He also is studying Physics as a minor. He achieved a position on the Dean's List both semesters of his 
 			sophomore school year. He hopes to one day design, develope, and market real-time integrated prosthetic limbs and organs for commercial use by everyday
-			citizens of whom wish to upgrade their restricted biological bodies into something more versatile and less fragile. He currently works under Dr. Christopher
-			Rogan in the development of <i>Fantasy Physics</i> with KU's <a href="http://kuhep.ku.edu/" style="color:white"><u>Experimental High Energy Physics</u></a> group.</font>
+			citizens. He currently works under Dr. Christopher Rogan in the development of <i>Fantasy Physics</i> with KU's <a href="http://kuhep.ku.edu/" style="color:white"><u>
+			Experimental High Energy Physics</u></a> group.</font>
 		    	</div>
 
        <button id="myBtn" onclick="topFunction()">
