--- a/rules.html
+++ b/rules.html
@@ -157,7 +157,7 @@
                           earned the most points wins the game for that week. Win as many games as possible for a chance to qualify for the playoffs.</font></li>
                       <li class="list-group-item"><font size="3"><i><b> 5) Make moves to boost your crew</i></b><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; As the executive, you are in charge:
                           Drop or bench members you feel aren't cutting it and replace them with available members, your second strings, or even make trades with other executives.</font></li>
-                      <li class="list-group-item"><font size="3"><i><b> 6) Your crew (optimisticlly) makes the playoffs and wins the alliance</i></b><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                      <li class="list-group-item"><font size="3"><i><b> 6) Your crew (optimistically) makes the playoffs and wins the alliance</i></b><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                           Only the strong survive, and at the end of the fantasy season, the top crews square off in a single-elimination tournament to decide the alliance champion. The last crew
                           standing wins a suprise, and substantial, amount of fantasy points and bragging rights until the next season. Make no mistake: there can only be one alliance champ.</font></li>
                     </ol>
@@ -227,20 +227,7 @@
         </div>
     </div>
 
-
-     <h3 style="margin-left:25px;font-size:30px;color:white">Game Play Process</h3>
-
      <h3 style="margin-left:25px;font-size:30px;color:white">What is a Tournament?</h3>
-
-     <h3 style="margin-left:25px;font-size:30px;color:white">User Restriction</h3>
-     <ul>
-         <li style="margin-left:50px;color:white;font-size:25px">A Tournament must have at least five (5) Users</li>
-     </ul>
-
-     <h3 style="margin-left:25px;font-size:30px;color:white">Tie Breaker </h3>
-     <ul>
-         <li style="margin-left:100px;color:white;font-size:19px">EXAMPLE:</li>
-     </ul>
 
      <h4 style="text-align:center;color:white"><b><i>Neutrino Tournament</b></i></h4>
      <table class="table table-bordered"style="background-color:rgb(119, 128, 175);color:white">
@@ -273,9 +260,6 @@
          <td>Team 2: 19pts</td>
      </tr>
      </table>
-     <ul>
-         <li style="margin-left:50px;color:white;font-size:20px"><i>User B won the most Events and thus, the Tournament</i></li>
-     </ul><br>
 
      <h3 style="margin-left:25px;font-size:30px;color:white">Ties</h3>
      <ul>
