--- a/scoringrubric.html
+++ b/scoringrubric.html
@@ -107,29 +107,39 @@
      <p class="round1" style="color:white"><font size="4">You have found your way to <i>The Hunt</i> - now take a look at how Fantasy Physics hunts for and
 	     administers points to each Crew Member.</p></font size>
      <br><br>
+     <h2 style="color:white"><i>At the Conference</i></h2>
+     <table colspan="3" class="table table-bordered" style="color:white">
+         <tr>
+             <th scope="col" style="text-align:center"><font size="3">Most Anecdotes Told; +1</font></th>
+             <th scope="col" style="text-align:center"><font size="3"># of Audience Questions; +1</font></th>
+             <th scope="col" style="text-align:center"><font size="3"># of Times Laughter Broke Out; +1</font></th>
+         </tr>
+     </table>
+     <br>
+
+     <h2 style="color:white"><i>Figures and Images</i></h2>
      <table colspan="3" class="table table-bordered" style="color:white">
 	 <tr>
-	    <th scope="col" style="text-align:center"><font size="3">Largest Dataset; +2</font></th>
-	    <th scope="col" style="text-align:center"><font size="3">Highest or Lowest Temperature; +1</font></th>
-       	<th scope="col" style="text-align:center"><font size="3">Most Number of Feynman Diagrams; +2</font></th>
-        <th scope="col" style="text-align:center"><font size="3">Most Greek Letters; +1</font></th>
-	    <th scope="col" style="text-align:center"><font size="3">Most Anecdotes Told; +2</font></th>
+	    <th scope="col" style="text-align:center"><font size="3">Largest # of Feynmann Diagrams; +1</font></th>
+	    <th scope="col" style="text-align:center"><font size="3">Largest # of Graphs; +1</font></th>
+       	<th scope="col" style="text-align:center"><font size="3">Most Data Points/Curves on a Graph; +1</font></th>
+        <th scope="col" style="text-align:center"><font size="3">Most Photographs Included; +1</font></th>
+	    <th scope="col" style="text-align:center"><font size="3">Most Intimidating Equation; +1</font></th>
 	 </tr>
+     </table>
+     <br>
+
+     <h2 style="color:white"><i>Content</i></h2>
+     <table colspan="3" class="table table-bordered" style="color:white">
 	 <tr>
-	    <th scope="col" style="text-align:center"><font size="3">Using a Pointer; +0.5</font></th>
-	    <th scope="col" style="text-align:center"><font size="3">Number of Graphs Used: <br> > 10 = +2; <br> 5 - 9 = +1; <br> 1 - 4 = +0.5</font></th>
-	    <th scope="col" style="text-align:center"><font size="3">Most Data Points on a Graph; +1</font></th>
-      	    <th scope="col" style="text-align:center"><font size="3">Most Photographs Included; +1</font></th>
-     	    <th scope="col" style="text-align:center"><font size="3">Most Number of Significant Figures; +0.5</font></th>
+	    <th scope="col" style="text-align:center"><font size="3">Highest Temperature or Energy Mentioned; +1</font></th>
+	    <th scope="col" style="text-align:center"><font size="3">Lowest Temperature or Energy Mentioned; +1</font></th>
+	    <th scope="col" style="text-align:center"><font size="3">Largest Dataset Presented; +1</font></th>
+      	<th scope="col" style="text-align:center"><font size="3">Largest Deviation from Expectations; +1</font></th>
+     	<th scope="col" style="text-align:center"><font size="3">Measurement with the Largest # of Significant Figures; +1</font></th>
 	 </tr>
-     <tr>
-     	    <th scope="col" style="text-align:center"><font size="3">Time Presented: <br> Time Allotted = +2; <br> < Time Allotted = +0.5</font></th>
-    	    <th scope="col" style="text-align:center"><font size="3">Most Geometric Shapes; +2</font></th>
-	    <th scope="col" style="text-align:center"><font size="3">Most Questions Asked by Audience; +1</font></th>
-	    <th scope="col" style="text-align:center"><font size="3">Most Standard Deviation Graphs; +2</font></th>
-	    <th scope="col" style="text-align:center"><font size="3">Most Arrows Used to Point to Other Items; +1</font></th>
-	 </tr>
-    </table>
+     </table>
+
     <br>
     <a href="thehunt.pdf" style="color:white"><u>The Hunt pdf View</u></a>
     <br><br><br>
